samples/errors/condition-not-bool.stkn
condition: 0 && true

if 0
    return
else
    write(false)
